Updated pricing page with payments and document upload

--- a/pricing.html
+++ b/pricing.html
@@ -8,36 +8,91 @@
 </head>
 <body>
     <header>
-        <h1>Pricing</h1>
+        <h1>Pricing & Payment</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="pricing.html">Pricing</a>
             <a href="reviews.html">Reviews</a>
         </nav>
     </header>
-    <section class="pricing-table">
-        <h2>Our Services & Pricing</h2>
+
+    <section>
+        <h2>Our Services & Pricing (JMD)</h2>
         <table>
             <tr>
                 <th>Service</th>
-                <th>Price</th>
+                <th>Price (JMD)</th>
+                <th>Pay Now</th>
             </tr>
             <tr>
-                <td>Printing (per page)</td>
-                <td>$0.10</td>
+                <td>Black & White Printing (per page)</td>
+                <td>$30</td>
+                <td>
+                    <a href="https://www.paypal.com/donate" class="pay-button">PayPal</a>
+                    <a href="https://pay.google.com/" class="pay-button gpay">GPay</a>
+                </td>
             </tr>
             <tr>
-                <td>Document Editing</td>
-                <td>$5.00</td>
+                <td>Business Proposal Writing</td>
+                <td>$8,000</td>
+                <td>
+                    <a href="https://www.paypal.com/donate" class="pay-button">PayPal</a>
+                    <a href="https://pay.google.com/" class="pay-button gpay">GPay</a>
+                </td>
             </tr>
             <tr>
-                <td>Custom Document Creation</td>
-                <td>$10.00</td>
+                <td>Colour Printing (per page)</td>
+                <td>$80</td>
+                <td>
+                    <a href="https://www.paypal.com/donate" class="pay-button">PayPal</a>
+                    <a href="https://pay.google.com/" class="pay-button gpay">GPay</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Document Creation (Resume, Letter, etc.)</td>
+                <td>$1,500</td>
+                <td>
+                    <a href="https://www.paypal.com/donate" class="pay-button">PayPal</a>
+                    <a href="https://pay.google.com/" class="pay-button gpay">GPay</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Document Editing (per page)</td>
+                <td>$500</td>
+                <td>
+                    <a href="https://www.paypal.com/donate" class="pay-button">PayPal</a>
+                    <a href="https://pay.google.com/" class="pay-button gpay">GPay</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Lamination (per page)</td>
+                <td>$300</td>
+                <td>
+                    <a href="https://www.paypal.com/donate" class="pay-button">PayPal</a>
+                    <a href="https://pay.google.com/" class="pay-button gpay">GPay</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Scanning (per document)</td>
+                <td>$200</td>
+                <td>
+                    <a href="https://www.paypal.com/donate" class="pay-button">PayPal</a>
+                    <a href="https://pay.google.com/" class="pay-button gpay">GPay</a>
+                </td>
             </tr>
         </table>
     </section>
-    <footer>
-        <p>&copy; 2025 JDS Document Centre. All rights reserved.</p>
-    </footer>
+
+    <section>
+        <h2>Upload Your Document</h2>
+        <p>Send us your documents via email, and we’ll have them ready for you when you arrive.</p>
+        <p>Email: <strong>jdsdocuments@gmail.com</strong></p>
+        <p>Or upload directly here:</p>
+        <form action="mailto:jdsdocuments@gmail.com" method="post" enctype="multipart/form-data">
+            <input type="file" name="document">
+            <input type="submit" value="Send Document">
+        </form>
+    </section>
+
 </body>
 </html>
