--- a/reviews.html
+++ b/reviews.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reviews - JDS Document Centre</title>
+    <title>Customer Reviews - JDS Document Centre</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,19 +15,28 @@
             <a href="reviews.html">Reviews</a>
         </nav>
     </header>
-    <section class="reviews">
+    <section>
         <h2>What Our Customers Say</h2>
         <div class="review">
-            <p>"Excellent service! Fast and reliable."</p>
-            <span>- John Doe</span>
+            <h3>Michael Thompson</h3>
+            <p>"Excellent service! My business proposal was well-structured and delivered on time. Highly recommend!"</p>
         </div>
         <div class="review">
-            <p>"Great quality prints at an affordable price!"</p>
-            <span>- Jane Smith</span>
+            <h3>Samantha Reid</h3>
+            <p>"Great quality prints at affordable prices. I always get my documents edited here."</p>
+        </div>
+        <div class="review">
+            <h3>Javon Lewis</h3>
+            <p>"The turnaround time is amazing! I needed urgent lamination, and they delivered within minutes."</p>
+        </div>
+        <div class="review">
+            <h3>Tracy-Ann Williams</h3>
+            <p>"Customer service is top-notch. They helped me format my CV perfectly. Definitely coming back!"</p>
+        </div>
+        <div class="review">
+            <h3>Kevin Brown</h3>
+            <p>"The team at JDS Document Centre is professional and efficient. They always go the extra mile!"</p>
         </div>
     </section>
-    <footer>
-        <p>&copy; 2025 JDS Document Centre. All rights reserved.</p>
-    </footer>
 </body>
 </html>
